fix: updated abi for token minted
